removed important flag in css

--- a/static/styles/courses/course.scss
+++ b/static/styles/courses/course.scss
@@ -282,7 +282,7 @@
 }
 
 .card.assignment:hover{
-  background-color: $colorLightGrey!important;
+  background-color: $colorLightGrey;
 }
 
 .card.assignment a {
