--- a/static/styles/courses/course.scss
+++ b/static/styles/courses/course.scss
@@ -203,6 +203,10 @@
   }
 }
 
+.card-topic.card-transparent{
+  opacity: 0.6;
+}
+
 .topic {
   margin-top: 10px;
 }
@@ -242,6 +246,10 @@
   padding: 10px 0;
   clear: both;
 
+  .group-card:hover {
+    background-color: $colorLightGrey;
+  }
+
   .group-card {
     width: 100%;
     position: relative;
@@ -255,6 +263,7 @@
 
     a {
       color: #373a3c;
+      text-decoration: none;
     }
 
     .card-tags {
@@ -270,6 +279,14 @@
 
 .section-my-tasks {
   margin-top: 30px;
+}
+
+.card.assignment:hover{
+  background-color: $colorLightGrey;
+}
+
+.card.assignment a {
+  text-decoration: none;
 }
 
 #member-modal-body {
