--- a/views/homework/assignment.hbs
+++ b/views/homework/assignment.hbs
@@ -82,7 +82,7 @@
                             {{else}}
                                 <a id="submission-tab-link" class="tab-link" href="#activetabid=submission" alt="Deine Abgabe">Abgabe</a>
                                 <a id="feedback-tab-link" class="tab-link" href="#activetabid=feedback" alt="Bewertung deiner Abgabe durch den Lehrer">Feedback</a>
-                                {{#if publicSubmissions}}
+                                {{#if ../publicSubmissions}}
                                     <a id="submissions-tab-link" class="tab-link" href="#activetabid=submissions" alt="alle Abgaben">Abgaben</a>
                                 {{/if}}
                             {{/inArray}}
@@ -102,7 +102,7 @@
                             {{else}}
 {{> 'homework/feedback'}}
 {{> 'homework/submission'}}
-                                {{#if publicSubmissions}}
+                                {{#if ../publicSubmissions}}
 {{> 'homework/submissions'}}
                                 {{/if}}
                             {{/inArray}}
