make folder permissions editable

--- a/views/teams/overview.hbs
+++ b/views/teams/overview.hbs
@@ -24,7 +24,7 @@
                 {{> 'dashboard/components/card_section' section-id="teamInvitations" title="" content=teamInvitations link-text="Akzeptieren"}}
             {{/if}}
 
-            {{#userHasPermission "COURSE_EDIT"}}
+            {{#userHasPermission "TEAM_EDIT"}}
             <div class="col-xs-12">
                 <div class="row padding-top">
                     <div class="col-sm-12">
