--- a/views/teams/team.hbs
+++ b/views/teams/team.hbs
@@ -73,24 +73,35 @@
 									<i class="fa fa-folder" aria-hidden="true"></i> {{this.name}}
 								</strong>
                                 {{#userHasPermission "FOLDER_DELETE"}}
-								<a href="/files/directory/"
-								   target="_blank"
-								   data-method="delete"
-                                   title="Ordner löschen"
-								   data-file-name="{{../this.name}}"
-								   data-file-key="{{../this.path}}">
-									<i class="fa fa-trash-o pull-right"></i>
-								</a>
+                                    <a href="/files/directory/"
+                                    target="_blank"
+                                    data-method="delete"
+                                    title="Ordner löschen"
+                                    data-file-name="{{../this.name}}"
+                                    data-file-key="{{../this.path}}">
+                                        <i class="fa fa-trash-o pull-right"></i>
+                                    </a>
 
-                                <a href="/directoryModel/{{../this._id}}/rename"
-								   target="_blank"
-								   data-method="dir-rename"
-                                   title="Ordner umbenennen"
-                                   data-directory-id="{{../this._id}}"
-								   data-directory-name="{{../this.name}}"
-								   >
-									<i class="fa fa-edit pull-right"></i>
-								</a>
+                                    <a href="/directoryModel/{{../this._id}}/rename"
+                                    target="_blank"
+                                    data-method="dir-rename"
+                                    title="Ordner umbenennen"
+                                    data-directory-id="{{../this._id}}"
+                                    data-directory-name="{{../this.name}}"
+                                    >
+                                        <i class="fa fa-edit pull-right"></i>
+                                    </a>
+
+                                    <a href="/directoryModel/{{../this._id}}/share"
+                                    target="_blank"
+                                    class="btn-file-share"
+                                    data-method="dir-share"
+                                    title="Ordner-Freigabe"
+                                    data-file-id="{{../this._id}}"
+                                    data-file-name="{{../this.name}}"
+                                    >
+                                        <i class="fa fa-share-alt pull-right"></i>
+                                    </a>
                                 {{/userHasPermission}}
 							</div>
 						</div>
@@ -125,21 +136,6 @@
                 {{/if}}                 --}}
             </section>
 
-            {{#userHasPermission "FOLDER_CREATE"}}
-            <section class="new-directory">
-                <div class="row">
-                        <div class="col-sm-10 col-xs-16 col-md-8">
-                            <div data-toggle="modal">
-                                <div>
-
-
-                                </div>
-                            </div>
-                        </div>
-                </div>
-            </section>
-            {{/userHasPermission}}            
-
             <section class="row">
                 <div class="col-sm-12">
                     <h4>Termine</h4>
@@ -173,22 +169,26 @@
 
             <section class="row">
                 <div class="col-sm-12">
-                    {{#inArray "RENAME_TEAM" permissions}}
-                        <h4>Aktionen</h4>
-                    {{/inArray}}
+                    {{#userHasPermission "TEAM_EDIT"}}
+                        <div>
+                            {{#inArray "RENAME_TEAM" ../permissions}}
+                                <h4>Aktionen</h4>
+                            {{/inArray}}
 
-                    {{#inArray "RENAME_TEAM" permissions}}
-                        <a href="/teams/{{../_id}}/edit" class="btn btn-add btn-primary">Team bearbeiten</a>
-                    {{/inArray}}
+                            {{#inArray "RENAME_TEAM"../ permissions}}
+                                <a href="/teams/{{../_id}}/edit" class="btn btn-add btn-primary">Team bearbeiten</a>
+                            {{/inArray}}
 
-                    {{#inArray "DELETE_TEAM" permissions}}
-                        <a href="/teams/{{../_id}}/"
-                           class="btn btn-delete-course btn-secondary"
-                           target="_blank"
-                           data-method="DELETE"
-                           data-name="{{../name}}"
-                           redirect="/teams/">Team löschen</a>
-                    {{/inArray}}
+                            {{#inArray "DELETE_TEAM" ../permissions}}
+                                <a href="/teams/{{../_id}}/"
+                                class="btn btn-delete-course btn-secondary"
+                                target="_blank"
+                                data-method="DELETE"
+                                data-name="{{../name}}"
+                                redirect="/teams/">Team löschen</a>
+                            {{/inArray}}
+                        </div>
+                    {{/userHasPermission}}
                 </div>
             </section>
 
