Fix display of files within team view

--- a/views/teams/team.hbs
+++ b/views/teams/team.hbs
@@ -109,7 +109,7 @@
                 </div>
             </section>
 
-            <section style="padding-top: 2rem" class="row">
+            <section style="padding-top: 2rem; clear: both" class="row">
                 <div class="col-sm-12">
                     <h5 style="padding: 10px 0 20px">Dateien</h5>
                     {{#embed "files/file-viewer"}}{{/embed}}
