--- a/views/files/files.hbs
+++ b/views/files/files.hbs
@@ -42,7 +42,7 @@
                 <div class="row">
                     {{#each directories}}
 						<div class="col-sm-6 col-xs-12 col-md-4">
-							<div class="card card-block folder" onclick="location.href = location.href + (location.href.split('').pop() !== '/' ? '/' : '') +'{{this._id}}';">
+							<div class="card card-block folder" onclick="location.href = openFolder('{{this._id}}');">
 								<strong class="card-title-directory">
 									<i class="fa fa-folder" aria-hidden="true"></i> {{this.name}}
 								</strong>
