Fix folder url in teams view

--- a/views/teams/team.hbs
+++ b/views/teams/team.hbs
@@ -68,7 +68,7 @@
                 <div class="row">
                     {{#each directories}}
 						<div class="col-sm-6 col-xs-12 col-md-4">
-							<div class="card card-block folder" onclick="location.href = '/files/teams/{{../_id}}?dir={{this._id}}';">
+							<div class="card card-block folder" onclick="location.href = '/files/teams/{{../_id}}/{{this._id}}';">
 								<strong class="card-title-directory">
 									<i class="fa fa-folder" aria-hidden="true"></i> {{this.name}}
 								</strong>
