--- a/static/styles/courses/course.scss
+++ b/static/styles/courses/course.scss
@@ -33,10 +33,11 @@
 
   @media (min-width: 576px) {
     .course-card {
-      box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+      border: 1px solid rgba(0,0,0,.12);
       transition: all 0.3s cubic-bezier(.25,.8,.25,1);
       //padding: 10px;
       padding-bottom: 20px;
+      background-color: $colorWhite;
     }
 
     .sectionsContainer {
