--- a/static/styles/lib/loggedin.scss
+++ b/static/styles/lib/loggedin.scss
@@ -106,7 +106,7 @@ aside.nav-sidebar {
         display: block;
         padding: 14px;
         font-size: 24px;
-        background: $primaryColor;
+        background: $colorDarkerGrey;
         color: whitesmoke;
         text-decoration: none;
         @include media-breakpoint-down(md) {
