--- a/static/styles/lib/sc-theme/sc-card.scss
+++ b/static/styles/lib/sc-theme/sc-card.scss
@@ -1,8 +1,4 @@
 @import "../colors";
-.sc-card-link{
-  text-decoration: none!important;
-  display:block;
-}
 .sc-card {
     display: flex;
     flex-wrap: wrap;
@@ -16,6 +12,7 @@
     border: 2px solid rgba(0,0,0,.125);
     display: flex;
     justify-content: space-between;
+    cursor: pointer;
     &:hover {
         background: rgba(0,0,0,.2);
     }
@@ -27,7 +24,7 @@
         flex-direction: row;
         flex-wrap: nowrap;
         position: relative;
-        min-height: 6rem;
+        min-height: 4rem;
         padding: .5rem .5rem .5rem;
         color: $fontColor;
         &::before {
@@ -49,6 +46,7 @@
               padding: 10px 0 5px 0;
               margin-top: 8px;
             }
+            margin-top: 10px;
             border-bottom: 2px solid;
             align-self: flex-end;
             font-weight: 700;
@@ -69,7 +67,6 @@
                 padding: 0;
                 margin: 0;
                 border-radius: 50%;
-                background: none;
                 border: none;
                 color: #fff;
                 font-size: 20px;
@@ -95,7 +92,7 @@
 
     }
     .sc-card-body {
-        padding: .5rem .5rem 0rem;
+        padding: .5rem .5rem .5rem;
         margin: 0;
         flex: 1 1 0;
         width: 100%;
