--- a/views/lib/components/sc-card.hbs
+++ b/views/lib/components/sc-card.hbs
@@ -1,40 +1,38 @@
-  <article class="sc-card" {{#if this.background}} style="border-color:{{this.background}};" {{/if}}>
-      <div class="sc-card-top-header" {{#if this.background}} style="background:{{this.background}};" {{/if}}></div>
-      <div class="sc-card-header">
-        <span class="sc-card-title w-100" {{#if this.background}} style="border-color:{{this.background}};" {{/if}}>
-          <span class="title" >{{{ stripOnlyScript this.title }}}</span>
-          {{#if this.secondaryTitle}}
-            <small class="d-block secondary-title" {{#if this.background}} style="border-color:{{this.background}};" {{/if}}>{{{ stripOnlyScript this.secondaryTitle }}}</small>
-          {{/if}}
-        </span>
-
-        <div class="sc-card-menu">
-          {{#each this.actions}}
-            {{#if this.method}}
-              <button class="sc-card-menu-action {{this.class}}" target="_blank" data-method="DELETE" data-name="{{../title}}" alt="'{{../title}}' löschen">
-                <i class="fa fa-{{this.icon}}"></i>
-              </button>
-            {{else}}
-              <button class="sc-card-menu-action {{this.class}}" onClick="window.open({{this.link}})" alt="'{{../../title}}' {{this.alt}}.">
-                <i class="fa fa-{{this.icon}}"></i>
-              </button>
-            {{/if}}
-          {{else}}
-            {{#if this.menuInfo}}
-              <small class="sc-card-menu-info">{{{this.menuInfo}}}</small>
-            {{/if}}
-          {{/each}}
-        </div>
-      </div>
-      <div class="sc-card-body ckcontent">
-        {{truncateHTML (conflictFreeHtml this.content)}}
-      </div>
-    </a>
-    <div class="sc-card-footer">
-      {{#if additionalInfoName}}
-        <div class="additionalInfo">
-          {{> (concat 'lib/sc-card_additionalInfo/' additionalInfoName) }}
-        </div>
+<article class="sc-card" onclick="location.href='{{this.url}}'" {{#if this.background}} style="border-color:{{this.background}};" {{/if}}>
+  <div class="sc-card-top-header" {{#if this.background}} style="background:{{this.background}};" {{/if}}></div>
+  <div class="sc-card-header">
+    <span class="sc-card-title w-100" {{#if this.background}} style="border-color:{{this.background}};" {{/if}}>
+      <span class="title">{{{ stripOnlyScript this.title }}}</span>
+      {{#if this.secondaryTitle}}
+        <small class="d-block secondary-title" {{#if this.background}} style="border-color:{{this.background}};" {{/if}}>{{{ stripOnlyScript this.secondaryTitle }}}</small>
       {{/if}}
+    </span>
+  </div>
+  <div class="sc-card-body ckcontent">
+    {{truncateHTML (conflictFreeHtml this.content)}}
+  </div>
+  <div class="sc-card-footer">
+    {{#if additionalInfoName}}
+      <div class="additionalInfo">
+        {{> (concat 'lib/sc-card_additionalInfo/' additionalInfoName) }}
+      </div>
+    {{/if}}
+    <div class="sc-card-menu">
+      {{#each this.actions}}
+        {{#if this.method}}
+          <button class="sc-card-menu-action {{this.class}}" target="_blank" data-method="DELETE" data-name="{{../title}}" alt="'{{../title}}' löschen">
+            <i class="fa fa-{{this.icon}}"></i>
+          </button>
+        {{else}}
+          <button class="sc-card-menu-action {{this.class}}" onClick="window.open({{this.link}})" alt="'{{../../title}}' {{this.alt}}.">
+            <i class="fa fa-{{this.icon}}"></i>
+          </button>
+        {{/if}}
+      {{else}}
+        {{#if this.menuInfo}}
+          <small class="sc-card-menu-info">{{{this.menuInfo}}}</small>
+        {{/if}}
+      {{/each}}
     </div>
-  </article>
+  </div>
+</article>
