--- a/static/styles/calendar/calendar.scss
+++ b/static/styles/calendar/calendar.scss
@@ -10,7 +10,9 @@
             font-weight: 800;
             line-height: 30px;
         }
-
+        .fc-view-container {
+          background-color: $colorWhite;
+        }
         .fc-event {
             border: 0px;
             color: #646464;
