--- a/static/styles/lib/loggedin.scss
+++ b/static/styles/lib/loggedin.scss
@@ -106,8 +106,8 @@ aside.nav-sidebar {
         display: block;
         padding: 14px;
         font-size: 24px;
-        background: $colorDarkerGrey;
-        color: whitesmoke;
+        background: $colorWhite;
+        color: $colorDarkerGrey;
         text-decoration: none;
         @include media-breakpoint-down(md) {
             padding: 10px;
@@ -118,8 +118,8 @@ aside.nav-sidebar {
         .cloud-logo {
             display: inline-block;
             vertical-align: top;
-            width: 45px;
-            height: 30px;
+            width: 35px;
+            height: 29px;
             margin-bottom: -5px;
             margin-right: 0.25rem;
             background: $logoBackground;
@@ -318,7 +318,6 @@ header {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
-    background-color: $colorWhite;
 
     @include media-breakpoint-down(md) {
         padding-left: 60px;
