--- a/views/lib/sc-card_additionalInfo/memberCount.hbs
+++ b/views/lib/sc-card_additionalInfo/memberCount.hbs
@@ -1,5 +1,5 @@
 {{#if this.memberAmount includeZero=true}}
-    <a href="" class="btn-member" data-id="{{this._id}}" title="Teilnehmer">
+    <a href="" class="btn-member sc-card-menu-action" data-id="{{this._id}}" title="Teilnehmer">
         <i class="fa fa-user"></i>
         {{this.memberAmount}}
     </a>
