--- a/static/styles/lib/sc-theme/sc-card.scss
+++ b/static/styles/lib/sc-theme/sc-card.scss
@@ -49,6 +49,7 @@
             }
             margin-top: 10px;
             border-bottom: 2px solid;
+            padding-bottom: 3px;
             align-self: flex-end;
             font-weight: 700;
             overflow: hidden;
