--- a/static/styles/lib/sc-theme/sc-card.scss
+++ b/static/styles/lib/sc-theme/sc-card.scss
@@ -14,7 +14,7 @@
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     cursor: pointer;
     &:hover {
-        background: rgba(0,0,0,.2);
+        background: $colorLightGrey;
     }
     .sc-card-top-header {
       height:25px;
