--- a/views/files/files.hbs
+++ b/views/files/files.hbs
@@ -36,13 +36,13 @@
                     </div>
                 </div>
             </section>
-
+            {{#if directories}}
             <h6 style="padding: 1rem 0 1.5rem">Ordner</h6>
             <section class="directories">
                 <div class="row">
                     {{#each directories}}
 						<div class="col-sm-6 col-xs-12 col-md-4">
-							<div class="card card-block folder" onclick="location.href = location.href + (location.href.split('').pop() !== '/' ? '/' : '') +'{{this._id}}';">
+							<div class="card card-block folder" onclick="location.href = openFolder('{{this._id}}');">
 								<strong class="card-title-directory">
 									<i class="fa fa-folder" aria-hidden="true"></i> {{this.name}}
 								</strong>
@@ -71,7 +71,7 @@
                     {{/each}}
                 </div>
             </section>
-
+            {{/if}}
             <h6 style="display: block; clear: both; padding: 1.5rem 0 1.5rem">Dateien</h6>
             {{#embed "files/file-viewer"}}{{/embed}}
             {{#embed "files/files-grid"}}{{/embed}}
