--- a/views/teams/team.hbs
+++ b/views/teams/team.hbs
@@ -1,58 +1,15 @@
 
 {{#extend "lib/loggedin"}}
     {{#content "styles" mode="append"}}
+        <link rel="stylesheet" href="/styles/teams/teams.css"/>
         <link rel="stylesheet" href="/styles/files/files.css"/>
         <link rel="stylesheet" href="/vendor/jquery/jquery-ui.css"/>
-        <style>
-            .section-teams .section-news .container-fluid {
-                padding: 0;
-            }
-            .section-teams h4 {
-                margin-bottom: 1rem;
-            }
-            .section-teams .lead:empty {
-                margin-bottom: 0
-            }
-            .section-teams > section {
-                margin-top: 3rem
-            }
-            .section-teams .files {
-                margin-bottom: 10px;
-            }
-
-            .create-course-event, .create-team-event {
-                label {
-                    margin-right: 0.5rem;
-                }
-                .toggle {
-                    height: 2rem !important;
-                    width: 7rem !important;
-                    .toggle-handle {
-                        width: 0.3rem !important;
-                        background: whitesmoke !important;
-                    }
-                }
-
-                .off {
-                    background: grey !important;
-                    label {
-                        color: whitesmoke !important;
-                        padding-left: 48px !important;
-                    }
-                }
-
-                .on {
-                    label {
-                        padding-right: 48px !important;
-                    }
-                }
-            }
-        </style>
     {{/content}}
 
     {{#content "scripts" mode="append"}}
         <script src="/scripts/jquery/jquery-ui.min.js" type="text/javascript" defer></script>
         <script src="/scripts/jquery/jquery.ui.touch-punch.js" type="text/javascript" defer></script>
+        <script src="/scripts/dropzone/dropzone.js" type="text/javascript" defer></script>
         <script src="/scripts/files.js" type="text/javascript" defer></script>
         <script src="/scripts/teams.js" type="text/javascript" defer></script>
     {{/content}}
@@ -98,16 +55,85 @@
                 </div>
             </section>
 
-            <section class="row">
+            <section>
+                <h4>Dateien & Ordner</h4>
+            </section>
+
+            {{#if canUploadFile}}
+                {{#embed "files/file-upload"}}{{/embed}}
+            {{/if}}
+
+            <section style="margin-top: 1rem" class="directories">
+                <h5 style="color: #373a3c">Ordner</h5>
+                <div class="row">
+                    {{#each directories}}
+						<div class="col-sm-6 col-xs-12 col-md-4">
+							<div class="card card-block folder" onclick="location.href = '/files/teams/{{../_id}}/{{this._id}}';">
+								<strong class="card-title-directory">
+									<i class="fa fa-folder" aria-hidden="true"></i> {{this.name}}
+								</strong>
+                                {{#userHasPermission "FOLDER_DELETE"}}
+                                    <a href="/files/directory/"
+                                    target="_blank"
+                                    data-method="delete"
+                                    title="Ordner löschen"
+                                    data-file-name="{{../this.name}}"
+                                    data-file-key="{{../this.path}}">
+                                        <i class="fa fa-trash-o pull-right"></i>
+                                    </a>
+
+                                    <a href="/directoryModel/{{../this._id}}/rename"
+                                    target="_blank"
+                                    data-method="dir-rename"
+                                    title="Ordner umbenennen"
+                                    data-directory-id="{{../this._id}}"
+                                    data-directory-name="{{../this.name}}"
+                                    >
+                                        <i class="fa fa-edit pull-right"></i>
+                                    </a>
+
+                                    <a href="/directoryModel/{{../this._id}}/share"
+                                    target="_blank"
+                                    class="btn-file-share"
+                                    data-method="dir-share"
+                                    title="Ordner-Freigabe"
+                                    data-file-id="{{../this._id}}"
+                                    data-file-name="{{../this.name}}"
+                                    >
+                                        <i class="fa fa-share-alt pull-right"></i>
+                                    </a>
+                                {{/userHasPermission}}
+							</div>
+						</div>
+                    {{/each}}
+                </div>
+            </section>
+
+            <section style="padding-top: 2rem; clear: both" class="row">
                 <div class="col-sm-12">
-                    <h4>Dateien</h4>
+                    <h5 style="padding: 10px 0 20px">Dateien</h5>
                     {{#embed "files/file-viewer"}}{{/embed}}
                     {{#embed "files/files-grid" files=files teamId=../_id}}{{/embed}}
-                    <a href="{{filesUrl}}" class="btn btn-add btn-secondary">Zu den Team-Dateien</a>
-                    <button class="btn btn-add btn-secondary btn-file-permissions">
-                        Freigabe-Einstellungen ändern
-                    </button>
                 </div>
+            </section>
+
+            <section style="margin-top: 1rem">
+                <h5 style="padding: 10px 0 20px">Aktionen</h5>
+
+                <a href="{{filesUrl}}" class="btn btn-add btn-secondary">Zu den Team-Dateien</a>
+                <button class="btn btn-add btn-secondary btn-file-permissions">
+                    Freigabe-Einstellungen ändern
+                </button>
+                {{#if ../canCreateDir}}
+                    <span class="btn btn-secondary create-directory">
+                        <i class="fa fa-plus" aria-hidden="true"></i> Neuen Ordner erstellen
+                    </span>
+                {{/if}}
+                {{!-- {{#if ../canCreateFile}}
+                    <span class="btn btn-secondary new-file" data-file-path="{{this.path}}">
+                        <i class="fa fa-plus" aria-hidden="true"></i> Neue Datei erstellen
+                    </span>
+                {{/if}}                 --}}
             </section>
 
             <section class="row">
@@ -143,22 +169,26 @@
 
             <section class="row">
                 <div class="col-sm-12">
-                    {{#inArray "RENAME_TEAM" permissions}}
-                        <h4>Aktionen</h4>
-                    {{/inArray}}
+                    {{#userHasPermission "TEAM_EDIT"}}
+                        <div>
+                            {{#inArray "RENAME_TEAM" ../permissions}}
+                                <h4>Aktionen</h4>
+                            {{/inArray}}
 
-                    {{#inArray "RENAME_TEAM" permissions}}
-                        <a href="/teams/{{../_id}}/edit" class="btn btn-add btn-primary">Team bearbeiten</a>
-                    {{/inArray}}
+                            {{#inArray "RENAME_TEAM"../ permissions}}
+                                <a href="/teams/{{../_id}}/edit" class="btn btn-add btn-primary">Team bearbeiten</a>
+                            {{/inArray}}
 
-                    {{#inArray "DELETE_TEAM" permissions}}
-                        <a href="/teams/{{../_id}}/"
-                           class="btn btn-delete-course btn-secondary"
-                           target="_blank"
-                           data-method="DELETE"
-                           data-name="{{../name}}"
-                           redirect="/teams/">Team löschen</a>
-                    {{/inArray}}
+                            {{#inArray "DELETE_TEAM" ../permissions}}
+                                <a href="/teams/{{../_id}}/"
+                                class="btn btn-delete-course btn-secondary"
+                                target="_blank"
+                                data-method="DELETE"
+                                data-name="{{../name}}"
+                                redirect="/teams/">Team löschen</a>
+                            {{/inArray}}
+                        </div>
+                    {{/userHasPermission}}
                 </div>
             </section>
 
