Set initial school year id on classes view based on current school year

--- a/views/planner/myClasses.hbs
+++ b/views/planner/myClasses.hbs
@@ -12,7 +12,7 @@
 {{#content "page"}}
 <section class="section-course-edit">
     <div id="react-root" data-schoolyeardata="{{schoolYearData}}" data-eventData="{{eventData}}" data-allClassTopics="{{allClassTopics}}"
-        data-allTopicTemplates="{{allTopicTemplates}}"></div>
+        data-allTopicTemplates="{{allTopicTemplates}}" data-initialschoolyearid="{{initialSchoolYearId}}"></div>
 </section>
 {{/content}}
 {{/extend}}
