fix errors when doing file sharing, fix file permission sharing and make it only visible on team relevant file pages

--- a/views/files/files-grid.hbs
+++ b/views/files/files-grid.hbs
@@ -129,7 +129,7 @@
 
 {{#embed "lib/components/modal-form" class="share-modal"}}
     {{#content "fields"}}
-        {{> "files/forms/form-share-file" teamId=teamId}}
+        {{> "files/forms/form-share-file" teamFiles=teamFiles}}
     {{/content}}
 {{/embed}}
 
