--- a/static/styles/team/team.scss
+++ b/static/styles/team/team.scss
@@ -158,6 +158,7 @@
   .person-title {
     color: #000;
     font-size: 2em;
+    overflow-wrap: break-word;
   }
   .person-desc {
     color: rgba(0, 0, 0, 0.4);
