added footer action

--- a/views/lib/components/sc-card.hbs
+++ b/views/lib/components/sc-card.hbs
@@ -18,6 +18,10 @@
       </div>
     {{/if}}
     <div class="sc-card-menu">
+      <a class="sc-card-menu-action open" href="{{this.url}}" alt="{{this.link-text}}">
+        {{this.link-text}}
+        <i class="fa fa-chevron-right"></i>
+      </a>
       {{#each this.actions}}
         {{#if this.method}}
           <a class="sc-card-menu-action {{this.class}}"
